--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li><a href="cursos.html">Cursos</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
+                 <li><a href="peroo.html">Contacto</a></li>
             </ul>
         </nav>
         <section id="inicio">
